Remove unneeded hardcoded functions (#55) (#58)
Remove hardcoded definitions of several functions